create functional testcase