@@ -9,6 +9,14 @@
     
     <dependencyManagement>
         <dependencies>
+            
+            <dependency>
+                <groupId>org.jboss.shrinkwrap.resolver</groupId>
+                <artifactId>shrinkwrap-resolver-bom</artifactId>
+                <version>2.1.1</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
             <dependency>
                 <groupId>org.jboss.arquillian</groupId>
                 <artifactId>arquillian-bom</artifactId>
@@ -16,6 +24,21 @@
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
+            <dependency>
+                <groupId>org.jboss.arquillian.extension</groupId>
+                <artifactId>arquillian-drone-bom</artifactId>
+                <version>2.0.0.Alpha3-SNAPSHOT</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.arquillian.selenium</groupId>
+                <artifactId>selenium-bom</artifactId>
+                <version>2.42.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            
         </dependencies>
     </dependencyManagement>
     
@@ -66,48 +89,57 @@
         </dependency>
         
         <dependency>
-            <groupId>org.jboss.arquillian.protocol</groupId>
-            <artifactId>arquillian-protocol-servlet</artifactId>
-            <scope>test</scope>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.jboss.jsfunit</groupId>
-            <artifactId>jboss-jsfunit-core</artifactId>
-            <version>2.0.0.Beta2</version>
-            <scope>test</scope>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.jboss.jsfunit</groupId>
-            <artifactId>jsfunit-arquillian</artifactId>
-            <version>2.0.0.Beta2</version>
-            <scope>test</scope>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.jboss.shrinkwrap.descriptors</groupId>
-            <artifactId>shrinkwrap-descriptors-impl</artifactId>
-            <version>1.1.0-beta-1</version>
+            <groupId>org.jboss.arquillian.graphene</groupId>
+            <artifactId>graphene-webdriver</artifactId>
+            <version>2.0.4-SNAPSHOT</version>
+            <type>pom</type>
             <scope>test</scope>
         </dependency>
         
         <dependency>
             <groupId>org.jboss.shrinkwrap.resolver</groupId>
-            <artifactId>shrinkwrap-resolver-api-maven</artifactId>
+            <artifactId>shrinkwrap-resolver-api</artifactId>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.jboss.shrinkwrap.resolver</groupId>
             <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
             <scope>test</scope>
         </dependency>
-        
+        <dependency>
+            <groupId>org.jboss.shrinkwrap.resolver</groupId>
+            <artifactId>shrinkwrap-resolver-api-maven</artifactId>
+            <scope>test</scope>
+        </dependency>
         
     </dependencies>
     
     <profiles>
+        
+        <profile>
+            <id>weld-2.1.2</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <dependencies>
+                
+                <dependency>
+                    <groupId>org.jboss.arquillian.container</groupId>
+                    <artifactId>arquillian-weld-se-embedded-1.1</artifactId>
+                    <version>1.0.0.CR8</version>
+                    <scope>test</scope>
+                </dependency>
+                
+                <dependency>
+                    <groupId>org.jboss.weld</groupId>
+                    <artifactId>weld-core-impl</artifactId>
+                    <version>2.1.2.Final</version>
+                    <scope>test</scope>
+                </dependency>
+                
+            </dependencies>
+        </profile>
+        
         <profile>
             <id>weld-se-1.2</id>
             <activation>
@@ -145,7 +177,7 @@
                 <dependency>
                     <groupId>org.glassfish.main.extras</groupId>
                     <artifactId>glassfish-embedded-all</artifactId>
-                    <version>3.1.2.2</version>
+                    <version>4.0</version>
                     <scope>test</scope>
                 </dependency>
                 
@@ -154,7 +186,7 @@
         
         <profile>
             <id>tomee</id>
-            
+            <!--Not working since CDI 1.1 is required-->
             <build>
                 <plugins>
                     <plugin>
@@ -181,6 +213,27 @@
         </profile>
         
         <profile>
+            <id>openejb-embedded</id>
+            <!--Not working since CDI 1.1 is required-->
+            <dependencies>
+                <dependency>
+                    <groupId>org.apache.openejb</groupId>
+                    <artifactId>arquillian-openejb-embedded-4</artifactId>
+                    <version>4.6.0.2</version>
+                    <scope>test</scope>
+                </dependency>
+                
+                <dependency>
+                    <groupId>org.apache.openejb</groupId>
+                    <artifactId>openejb-core</artifactId>
+                    <version>4.6.0.2</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+        
+        
+        <profile>
             <id>wildfly-8.1-final</id>
             
             <build>
@@ -193,7 +246,7 @@
                             <systemPropertyVariables>
                                 <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                                 <jboss.home>${project.basedir}/target/wildfly-8.1.0.Final</jboss.home>
-                                <JAVA_OPTS>-Xms256m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m</JAVA_OPTS>
+                                <JAVA_OPTS>-Xms256m -Xmx1024m -XX:PermSize=512m -XX:MaxPermSize=1024m -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC</JAVA_OPTS>
                                 <module.path>${project.basedir}/target/wildfly-8.1.0.Final/modules</module.path>
                             </systemPropertyVariables>
                             <redirectTestOutputToFile>false</redirectTestOutputToFile>
@@ -245,6 +298,7 @@
                 
             </dependencies>
         </profile>
+        
     </profiles>
     
     <repositories>
